Olympus/src/objects/HSFE_Assignment_Manager__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>HSFE_Area__c</fullName>
        <label>Area</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <label>Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>HSFE Lead Territory Management</label>
</CustomObject>